--- a/topic2/2_1.md
+++ b/topic2/2_1.md
@@ -8,13 +8,13 @@ layout: default
 
 --- 
 
-## 2.1
+# 2.1
 Command Line Basics  
 Weight: 3  
 
-### Lesson 1
+## Lesson 1
 
-#### Shell
+### Shell
 - Text mode program that reads user input and interprets it as commands to the system
 - A few common shells
     - Bourne-again shell (Bash)
@@ -49,7 +49,7 @@ Weight: 3
         - `$` indicates shell is run by regular user
         - `#` indicates shell is run by superuser `root`
 
-#### Command line structure
+### Command line structure
 - Basic structure
     - `command [option(s)...] [argument(s)...]
     - Example: `$ ls -l /home`
@@ -59,7 +59,7 @@ Weight: 3
     - `--help`
         - Use after command to display short overview of command
 
-#### Command behavior types
+### Command behavior types
 - Internal
     - Part of shell itself
     - Main purpose is executing tasks inside the shell
@@ -79,7 +79,7 @@ $ type man
 man is /usr/bin/man
 ```
 
-#### Quoting
+### Quoting
 - Three types of quotes in Bash
     - Double quotes
     - Single quotes
@@ -117,9 +117,9 @@ tom@mycomputer:~$ echo I am \$USER
 I am $USER
 ```
 
-### Lesson 2
+## Lesson 2
 
-#### Variables
+### Variables
 - Pieces of storage for data
     - Such as text or numbers
     - Value can be accessed at a later time
@@ -142,7 +142,7 @@ I am $USER
     - Most shells provide config files that contain variables which are set on shell launch
     - If variable should be permanent, it must be added to config file
 
-#### Manipulating variables 
+### Manipulating variables 
 - Set up local variable using `=`
 - Access value using `$`
     - Tells Bash to expand the variable and use its value
