--- a/topic2/2_2.md
+++ b/topic2/2_2.md
@@ -8,11 +8,11 @@ layout: default
 
 --- 
 
-## 2.2
+# 2.2
 Using the Command Line to Get Help  
 Weight: 2  
 
-### Getting Help on the Command Line
+## Getting Help on the Command Line
 - `/usr/share/doc/`
     - Stores most documentation of commands used by system 
     - Contains directory for most packages installed on system
