--- a/topic2/2_3.md
+++ b/topic2/2_3.md
@@ -8,13 +8,13 @@ layout: default
 
 --- 
 
-## 2.3
+# 2.3
 Using Directories and Listing Files  
 Weight: 2  
 
-### Lesson 1
+## Lesson 1
 
-#### Files, Directories, Naming
+### Files, Directories, Naming
 
 - Files
     - Contain data
@@ -40,7 +40,7 @@ Weight: 2
             - Have no special meaning in Linux
             - There for human understanding
 
-#### Navigating the Filesystem
+### Navigating the Filesystem
 
 - `pwd`
     - *Print working directory*
@@ -71,9 +71,9 @@ Weight: 2
         - Only has meaning in relation to current location
 
 
-### Lesson 2
+## Lesson 2
 
-#### Home Directories
+### Home Directories
 - Changes in root affect all users
 - Changes in root require admin perms
 - Home
@@ -88,7 +88,7 @@ Weight: 2
         - `$ ls ~michael`
         - Must have permission
 
-#### Hidden Files and Directories
+### Hidden Files and Directories
 - `ls -a`
     - Lists all, incl. hidden, files and directories
     - Hidden files and directories will always begin with a period `.`
@@ -114,7 +114,7 @@ $ ls -l
 -rw-r--r-- 1 user staff    3606 Jan 13  2017 report2018.txt
 ```
 
-#### Additional `ls` Options
+### Additional `ls` Options
 
 - `ls -lh` 
     - Combines *long list* with *human readable* 
