--- a/topic2/2_4.md
+++ b/topic2/2_4.md
@@ -8,11 +8,11 @@ layout: default
 
 --- 
 
-## 2.4
+# 2.4
 Creating, Moving, and Deleting Files  
 Weight: 2 
 
-### Creating 
+## Creating 
 
 - Case sensitivity
     - Linux is case sensitive
@@ -43,7 +43,7 @@ Weight: 2
     - `>` will overwrite if file name already exists
     - `>>` appends text to the end of existing file
 
-### Moving
+## Moving
 - `mv`
     - Last argument is destination dir
     - Multiple files can be specified
@@ -51,21 +51,21 @@ Weight: 2
     - Can be used to rename
         - `mv dir1 dir2`
 
-### Deleting
+## Deleting
 - `rm` can delete files and directories
     - Use `rm -r` to recursively remove nested directories
         - USE WITH CAUTION
         - `rm -ri` to prompt for confirmation before deletion
 - `rmdir` will delete empty directories
 
-### Copying
+## Copying
 - `cp` copies files and directories
     - Use last argument as destination of copies
     - If last argument is a file, it will be overwritten 
     - Use `-r` for copying directories
         - Will also copy contents of directory
 
-### Globbing
+## Globbing
 - Pattern matching language 
 - `*` 
     - Matches any number of any characters
