--- a/topic3/3_1.md
+++ b/topic3/3_1.md
@@ -8,11 +8,11 @@ layout: default
 
 ---
 
-## 3.1
+# 3.1
 Archiving Files on the Command Line  
 Weight: 2 
 
-### Introduction
+## Introduction
 - Compression
     - Reduces space consumption
     - Reduces data transfer size on networks
@@ -48,7 +48,7 @@ Weight: 2
         - Default
         - Not included
 
-### tar
+## tar
 - `tar`
     - Stands for *tape archive*
     - Most common Linux archiver
@@ -88,7 +88,7 @@ Weight: 2
         - e.g. `tar -czf file.tar.gz bigfile1`
     - Remember to always add correct file extensions
 
-### zip
+## zip
 - Windows compatibility 
     - `tar` applications uncommon in Windows
     - Use ZIP files for Windows interaction 
