--- a/topic4/4_2.md
+++ b/topic4/4_2.md
@@ -8,11 +8,11 @@ layout: default
 
 ---
 
-## 4.2
+# 4.2
 Understanding Computer Hardware  
 Weight: 2  
 
-### Power Supplies
+## Power Supplies
 - Computer system hardware requires:  
     - Specific voltages
     - Tight tolerances
@@ -27,7 +27,7 @@ Weight: 2
 - Standardized voltage:  
     - allow for world wide functionality of hardware components
 
-### Motherboard
+## Motherboard
 - Normalized interconnections  
     - Uses standardized connectors and form factors
     - Provides support for electrical needs of connectors
@@ -51,7 +51,7 @@ Weight: 2
         - Must be enabled through BIOS/UEFI settings
         - Few other configurations modified by most general users
 
-### Memory
+## Memory
 - Holds data and code of current running apps  
     - Known as RAM
         - Random Access Memory
@@ -75,7 +75,7 @@ Weight: 2
     - `free -m`
         - Retrieves memory availability output in megabytes
 
-### Processors
+## Processors
 - Deals with electrical signals
     - Binary values of 1 or 0
 - Central Processing Unit
@@ -213,7 +213,7 @@ Weight: 2
                 - Known as parallel processing 
             - Hyper Threading Technology (HTT)
                 - Allows for single CPU to process multiple instructions at once
-### Storage 
+## Storage 
 - Provide methods for retaining programs and data
 - Most common forms for servers and desktops:
     - Hard Disk Drives
@@ -264,7 +264,7 @@ Weight: 2
     - Used to check mounting points and device sizes
         - Especially useful for troubleshooting and partition configuring 
 
-### Partitioning
+## Partitioning
 - Divides storage device into:
     - Multiple independent partitions
         - Each treated as individual devices
@@ -291,7 +291,7 @@ Weight: 2
         - Combines multiple disks or partitions
         - Treats combined parts as single logical drive
 
-### Peripherals
+## Peripherals
 - Devices that provide input, output, external access for systems
     - Essential for interaction with the external world
 - Motherboard Connectors
@@ -335,7 +335,7 @@ Weight: 2
         - Motherboard or SoC-based
         - Often designed for specific uses with appropriate peripherals
 
-### Device Drivers
+## Device Drivers
 - Intermediaries between OS and hardware
 - Translates between:
     - Standard requests
