--- a/topic1/1_2.md
+++ b/topic1/1_2.md
@@ -8,18 +8,18 @@ layout: default
 
 ---
 
-## 1.2
+# 1.2
 Major Open Source Applications  
 Weight: 2  
 
-### Applications & Software
+## Applications & Software
 
 Install and removal of packages via terminal:  
  - Ordinary users must prepend with `sudo`
     - Followed by entering user password
     - This gives certain `root` user permissions without being in `root` account 
 
-#### Package manager
+### Package manager
 - Package repo with vast collection of apps available to install
 - Debian, Ubuntu, Mint install and uninstall commands
     - `dpkg` (DEB Packages)
@@ -49,7 +49,7 @@ Install and removal of packages via terminal:
         - Doesn't remove configuration files
     - apt-purge
         - Removes configuration files
-#### Office applications
+### Office applications
 - Most popular  
     - Apache OpenOffice
         - Apache License 2.0
@@ -64,7 +64,7 @@ Install and removal of packages via terminal:
     - Fully open and ISO standardized file format
     - Ensures docs are cross platform, cross application
 
-#### Web browsers
+### Web browsers
 - Main web browsers in Linux enviro
     - Google Chrome
         - Maintained by Google
@@ -79,7 +79,7 @@ Install and removal of packages via terminal:
         - Origins linked to Netscape
             - First popular web browser to adopt open source model
 
-#### Multimedia
+### Multimedia
 - Popular FLOSS applications
     - Blender
         - 3d animations and objects rendering
@@ -107,7 +107,7 @@ Install and removal of packages via terminal:
             - Amarok
                 - Can also manage local sound files
 
-#### Server programs
+### Server programs
 - Web page servers
     - Web browser: client
         - Common script: JavaScript
@@ -135,7 +135,7 @@ Install and removal of packages via terminal:
                     - Originated from MySQL
                 - PostgreSQL
 
-#### Data sharing
+### Data sharing
 - *Network File System* aka *NFS*
     - NSF protocol
     - Standard way to share file systems in Unix/Linux-only networks
@@ -180,7 +180,7 @@ Install and removal of packages via terminal:
         - Make sure to enable HTTPS
             - Encrypts all connections to your cloud
 
-#### Network administration
+### Network administration
 - Network configuration
     - Set of programs running on router
         - Responsible for setting up and checking network availability
@@ -198,7 +198,7 @@ Install and removal of packages via terminal:
         - Sometimes faster
         - Provides extra features
 
-#### Programming languages
+### Programming languages
 - Programs
     - Single file or complex system of files
         - OS treats these files as instruction sequence
