--- a/topic1/1_3.md
+++ b/topic1/1_3.md
@@ -8,11 +8,11 @@ layout: default
 
 ---
 
-## 1.3
+# 1.3
 Open Source Software and Licensing  
 Weight: 1  
 
-### The four essential freedoms
+## The four essential freedoms
 - Freedom 0
     - Freedom to run the program as you wish, for any purpose.
 - Freedom 1
@@ -25,7 +25,7 @@ Weight: 1
     - Gives whole community chance to benefit from changes.
     - Access to source code is a precondition.
 
-### FOSS & FLOSS
+## FOSS & FLOSS
 - FOSS
     - Free & open source software
 - FLOSS
@@ -33,7 +33,7 @@ Weight: 1
 - Proprietary
     - For profit, controlled, limited 
 
-### Copyleft
+## Copyleft
 - *Free Software Foundation* created licenses
     - *GNU General Public License* (GPL)
         - One of the most important license for free software
@@ -57,7 +57,7 @@ Weight: 1
         - Licensing under multiple licenses
         - e.g. a free license and a proprietary license
 
-### Open source & licenses 
+## Open source & licenses 
 - *Open Source Initiative* (OSI)
     - Has standardized procedure for checking OS software license compliance
     - Has more than 80 recognized OS licenses on the OSI website
@@ -93,7 +93,7 @@ Weight: 1
 - CC BY -NC -ND (Attribution-NonCommercial-NoDerivatives)
     - Attribution, non-commercial conditions, and unchanged
 
-### Business models in open source
+## Business models in open source
 - *Crowdfunding* 
     - Collection of money donations 
     - Donors receive pre-defined bonus in event of success
@@ -108,159 +108,6 @@ Weight: 1
     - Proprietary extensions development
 - *Software as a Service (SaaS)*
     - Customer pays for use according to adjustable parameters
-
-ICT Skills and Working in Linux  
-Weight: 2  
-
-### Desktop environments 
-- Modularity
-    - Different parts of the Linux system are developed by different projects and developers
-    - Several options for desktop enviros 
-    - Can install multiple enviros and pick the most useful for the user
-- Two major desktop enviros in Linux world
-    - *Gnome*
-        - Streamlined, clean applications
-        - Based on GTK toolkit
-            - Written in C
-        - Uses *Gnome Terminal* emulator
-    - *KDE*
-        - Larger selection of apps
-        - Highly customizable configuration
-        - Based on Qt library
-            - Written in C++
-        - Uses *Konsole* terminal emulator
-- Many terminals available 
-    - *Xterm* another choice
-
-### Presentations and projects
-- LibreOffice Impress
-    - part of LibreOffice suite
-    - Open source replacement for Microsoft Office
-    - Can open PTT and PPTX Powerpoint native files
-    - Use ODP Impress format 
-        - Part of Open Document Format
-            - International standard file format 
-- Beamer
-    - LaTeX document class for making slides and presentations 
-        - LaTeX is a markup typesetting system
-        - De facto standard for scientific documents
-        - Handles complex math symbols well
-- Reveal.js
-    - NPM package (NPM is default NodeJS package manager)
-    - Create presentations by using the web
-    - Uses HTML, CSS, JavaScript 
-    - Interactive presentations 
-    - Adapts well on any resolution and screen size
-- Other Microsoft Project replacements
-    - GanttProject
-    - ProjectLibre
-
-### Industry uses of Linux
-- Estimated 68% of web servers are Unix
-    - Largest portion of those are Linux
-    - Allows for lower cost and greater scalability
-    - Many Linux systems run in cloud as IaaS, PaaS, or SaaS
-- IaaS (Infrastructure as a Service)
-    - Pay as you go format
-    - Process known as *Virtualization*
-    - Shares resources of large server/host machine
-        - Pieced into smaller virtual machines (VMs)/operating systems
-        - VMs run as guests on host machine and access is granted
-        - *Hypervisor* 
-            - Software responsible for segregation and management of resources for guest OSs
-- Open source hypervisors
-    - Xen
-        - Oldest
-    - KVM
-        - Development sponsored by RedHat
-        - Most prominent
-    - VirtualBox
-        - Belongs to Oracle since its acquisition of Sun Microsystems
-        - Usually used by end users due to ease of use
-- PaaS (Platform as a Service)
-    - Users access a platform where they build, deploy, run their app 
-    - Eases burden of system admin and OS updates
-    - Heroku common PaaS example
-        - Program code runs without taking care of containers or VMs
-- SaaS (Software as a Service)
-    - Pay for software without worrying about underlying system
-    - i.e. Dropbox, Salesforce
-    - Often accessed through web browser
-- OpenStack
-    - Collection of open source software that can make use of different hypervisors and other tools in order to offer a complete IaaS cloud enviro on premises
-
-### Privacy issues when using the internet
-- Cookie tracking
-    - Websites save small files on computer to store and retrieve information
-    - Meant for ease of use UX
-    - Can be exploited 
-    - Many services require cookies to be enabled
-        - Websites can "break" if cookies are disabled 
-    - Cookie managers are useful tools to help manage and control cookie usage and persistance on your computer
-- DNT aka Do Not Track
-    - Does not mean your browsing is hidden
-    - DNT is simply a way to ask websites to not track you
-        - Websites don't have to comply 
-    - Uses header flag of HTTP request (DNT: 1) 
-    - Visit allaboutdnt.com for more info
-- Private windows
-    - aka private mode, incognito, or anonymous 
-    - Firefox: `ctrl`+`shift`+`p`
-    - Chrome: `ctrl`+`shift`+`n`
-    - Is not actually private but opens new window which will auto delete all session data upon exit
-        - No personal data, history, passwords, or cookies are stored after session ends 
-    - Is not private to the network, ISP, or someone standing behind you
-- Choosing the right password
-    - Do not use the same password more than once 
-    - Do not re-use same password/email combos 
-    - Do use a password manager 
-        - Manager stores all passwords and usernames 
-        - Can generate strong new passwords for you
-        - *KeePass* and *Bitwarden* strong password managers
-
-### Encryption
-- *Transport Layer Security (TLS)*
-    - Protocol that uses cryptography to secure network connections
-    - Successor of *Secure Sockets Layer (SSL)*
-        - Depreciated due to security flaws
-    - Current version 1.3
-    - Provides privacy and authenticity
-        - Uses symmetric and asymmetric public/private keys to establish connections
-    - The lock icon in the browser address bar signifies secure connection
-    - HTTPS protocol
-        - HTTP over TLS
-        - Makes sensitive data transfer possible
-            - Such as payment transactions and banking
-- GnuPG
-    - GNU Privacy Guard
-        - Open source implementation of OpenPGP
-    - Can be used to sign, encrypt, and decrypt 
-    - Works with public-key cryptography
-    - Widely available 
-- Disk encryption
-    - Two basic methods
-        - Stacked
-            - Implemented on top of existing filesystem
-            - Files and directories encrypted before being stored
-        - Block
-            - Below filesystem layer
-            - Makes sure everything that is written to a block device is encrypted
-            - If observed offline, will look like random data
-    - *dm-crypt*
-        - De facto standard for block encryption for Linux systems 
-        - Native in the kernel
-        - Can be used with *LUKS (Linus Unified Key Setup)* extension
-            - Specification that implements a platform-independent standard for use with various tools
-    - *EncFS*
-        - Stackable 
-        - Easiest way to secure data on Linux
-        - Does not require root privileges
-        - Can work on existing filesystem without modifications 
-    - *Veracrypt*
-        - If access to data on various platforms needed
-        - Successor of Truecrypt 
-        - Allows creation of encrypted media and files
-        - Cross-platform: Linux, MacOS, Windows
 
 ---
 
