--- a/topic4/4_4.md
+++ b/topic4/4_4.md
@@ -1,10 +1,234 @@
 ---
-title: "4.4"
-layout: default
+title
+        - "4.4
+layout
+        - defaul
 ---
 
 {% include links.md %}
 {% include 4nav.md %}
+
+---
+
+# 4.4
+Your Computer on the Network  
+Weight
+        - 2 
+
+## Basic Network Concepts
+- Links
+    - Physical connections between two devices allowing for information exchange
+        - Copper cables
+        - Optical fibers
+        - Radio waves
+        - Lasers
+- Interfaces
+    - Physical edge point on device (visible or internal) that connects links to device
+    - Can have more than one
+- Link layer networks
+    - Group of devices directly connected via links
+- Routers
+    - For communication beyond immediate network
+    - Act like bridges that allow data to travel between them
+- Packets
+    - Small units of data transmitted over a network
+        - Main building blocks of all communications over a network
+        - Can contain the data for files, webpages, video calls, YouTube videos, Spotify streaming, video-game streaming, online chats, and anything else you can access online
+    - Purpose
+        - Break down large data into manageable chunks for efficient transmission over networks
+        - May come with a packet number when part of a larger group for assembling packets in correct order on receiving end
+    - Structure
+        - Header
+            - Contains information on source, destination, addresses, packet number, protocol, etc.
+        - Payload
+            - The actual data
+                - File
+                - Website
+                - Email contents
+                - Etc.
+        - Trailer
+            - Error checking
+- Layered networking
+    - Conceptual divisions of network communication functions
+    - Each layer represents a specific set of related tasks and protocols
+    - Networks work together to enable data transmission across networks
+    - Most common layer models are
+            -         - OSI mode
+        - TCP/IP model
+    - While you don't need to know either models in depth for this certification, here is a small introduction to three relevant layer concepts for the purposes of this lesson
+        - Data link or simply link layer
+            - Divides packets into frames
+                - Frames are mainly for local addressing and distribution and are similar to a packet but not the same
+            - Assembles frames into packets
+            - Deals with physical addressing (MAC addressing)
+            - Manages access
+            - Detects errors 
+        - Network layer
+            - Routes packets between logically separated networks
+            - Deals with logical addressing (IP addressing)
+            - Forwards packets
+        - Application layer 
+            - Provides network services directly to end users and apps
+            - Provides email services 
+            - Allows remote host login
+
+## Link Layer Networking
+- Link Layer Address
+    - Identifies devices on the same link
+    - In Ethernet networks, this address is called a Media Access Control (MAC) address
+- MAC Address Characteristics
+    - Consists of 48 bits
+    - Not globally unique
+            - Used only within the same local network (link
+    - Cannot route packets to devices on other links
+- Packet Handling
+    - The recipient checks if the destination MAC address matches its own
+    - If it matches, the packet is processed
+    - If not, the packet is dropped
+- Broadcast Packets
+    - Exception to the above rule
+    - Sent to all devices in the local network and always accepted
+- Network interface
+    - Hardware or software component connecting a device to the network
+    - Provides physical connection to network
+    - Can be a simulated connection point
+    - Assigned a unique identifier (MAC address for ethernet)
+    - Allows for the sending and receiving of data
+    - E.g.
+        - Ethernet card
+        - WiFi adapter
+- `ip link show`
+    - Displays details of all network interfaces available on a system
+    - Shows active aka "up" or inactive aka "down" status
+    - Output
+        - Interface Index
+            - A number representing the network interface
+        - Interface Name
+            - Name of the interface
+                - `eth0` for ethernet 0
+                - `wlan0` for wireless local area network (lan)
+                - `lo` for loopback
+        - MAC Address
+            - Physical address associated with the interface
+        - MTU (Maximum Transmission Unit)
+            - Size limit for packets that can be transmitted
+        - Flags
+            - Indicates the interface status and capabilities 
+                - (e.g., UP, BROADCAST, MULTICAST)
+        - Detailed information
+            - Queue length, link type, etc.
+
+## Networking Concepts and Keywords (brief summary)
+- IPv4 Addresses
+    - 32-bit addresses that indicate the source and destination of data packets
+    - Theoretical maximum
+        - 4.29 billion addresses
+    - Many addresses reserved for special purposes (broadcast, multicast, private use)
+    - Human-readable format
+        - four numbers (0-255) separated by dots
+- IPv4 Subnets
+    - IP addresses are split into network and host portions
+    - Network portion
+        - Routes packets to a specific network
+    - Host portion
+        - Identifies specific devices on the network
+    - Subnet Mask
+        - Defines the split between network and host portions
+    - CIDR Notation
+        - Expresses the number of bits set in the subnet mask (e.g., `192.168.0.1/24`)
+- Private IPv4 Addresses
+    - Reserved subnets for private use
+        - `10.0.0.0/8`, `172.16.0.0/12`, `192.168.0.0/16`
+    - Not routable on the public internet; used for internal communication.
+    - Most home networks use private addresses mapped to a single public IP via NAT
+- Network Address Translation (NAT)
+    - Maps multiple internal addresses to a single external IP for internet communication
+    - Masquerading
+        - A form of NAT where internal devices are hidden behind one public IP
+    - Does not provide security; a firewall is still required for protection
+
+
+
+
+--- 
+
+
+
+
+## IPv4 Address Configuration
+- Two main methods
+  - Manual Assignment
+    - The user assigns the IP address manually to a network interface
+  - Dynamic Host Configuration Protocol (DHCP)
+    - Automatically assigns IP addresses using a server
+- DHCP server
+  - Assigns IP addresses to devices on the network
+  - Can also provide other network information
+    - DNS server IPs, default gateway, etc.
+  - Common in most networks
+    - Especially home and enterprise environments
+    - DHCP is usually enabled by default
+      - Most devices receive an IP address automatically when connected to a network
+
+- `ip addr add` (Manually Assign an IPv4 Address)
+  - Purpose
+    - Assign a specific IPv4 address to a network interface manually
+  - `IP_address`
+    - The IPv4 address you want to assign
+  - `subnet_mask` The subnet mask in CIDR notation 
+    - (e.g., `/24` for a 255.255.255.0 mask)
+  - `interface_name`
+    - The name of the network interface (e.g., `eth0`, `wlan0`)
+  - Syntax
+
+```bash
+sudo ip addr add IP_address/subnet_mask dev interface_name
+```
+
+  - Example
+
+```bash
+    sudo ip addr add 192.168.1.100/24 dev eth0
+```
+
+  - This assigns `192.168.1.100` with a `/24` subnet mask to the `eth0` interface
+- `ip addr show` (Verify IPv4 Address Assignment)
+  - Purpose
+    - Display the current configuration of all network interfaces, including assigned IP addresses
+
+  - Syntax
+
+```bash
+ip addr show
+```
+
+  - Shows all interfaces with their current IP addresses
+  - To check a specific interface
+
+```bash
+ip addr show dev interface_name
+```
+
+  - `interface_name`
+    - Name of the interface to check
+  - Example  
+    ```bash
+    ip addr show dev eth0
+    ```
+  - This shows the IP configuration for `eth0` only
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ---
 
