--- a/topic4/4_4.md
+++ b/topic4/4_4.md
@@ -217,6 +217,60 @@ ip addr show dev interface_name
     ```
   - This shows the IP configuration for `eth0` only
 
+#### 3. `ping` (Verify Network Connectivity):
+  - Purpose: Test the reachability of a device on the network by sending ICMP Echo Requests.
+  - Syntax:  
+    ```bash
+    ping destination_IP_or_hostname
+    ```
+    - `destination_IP_or_hostname`: The IP address or domain name of the target you want to check connectivity with.
+
+  - Example:  
+    ```bash
+    ping 192.168.1.1
+    ```
+    Sends echo requests to the target at `192.168.1.1`.
+
+  - Parameter: `-c n`:
+    - Purpose: Limits the number of echo requests sent.
+    - Syntax:  
+      ```bash
+      ping -c number destination_IP_or_hostname
+      ```
+      - `number`: Number of echo requests to send.
+
+    - Example:  
+      ```bash
+      ping -c 4 8.8.8.8
+      ```
+      Sends 4 echo requests to Google's DNS server (`8.8.8.8`), then stops.
+
+  - Stopping Ping:  
+    - If the `-c` parameter is not used, the `ping` command runs indefinitely. 
+    - To stop: Press Ctrl + C to terminate the command manually.
+
+#### Key Points to Remember:
+1. Manual IP Configuration:
+   - Use `ip addr add` to assign an IP.
+   - Use `ip addr show` to verify the configuration.
+
+2. DHCP Setup:
+   - Automatically assigns IPs without manual intervention.
+
+3. Network Connectivity Check:
+   - Use `ping` to test connection to another device.
+   - Control the number of ping requests with `-c`, and stop continuous ping with Ctrl + C.
+
+
+
+
+
+
+
+
+
+
+
 
 
 ---
