--- a/topic4/4_4.md
+++ b/topic4/4_4.md
@@ -167,97 +167,87 @@ Weight
     - Especially home and enterprise environments
     - DHCP is usually enabled by default
       - Most devices receive an IP address automatically when connected to a network
+### Expanded Commands for IPv4 Address Configuration
 
-- `ip addr add` (Manually Assign an IPv4 Address)
-  - Purpose
-    - Assign a specific IPv4 address to a network interface manually
-  - `IP_address`
-    - The IPv4 address you want to assign
-  - `subnet_mask` The subnet mask in CIDR notation 
-    - (e.g., `/24` for a 255.255.255.0 mask)
-  - `interface_name`
-    - The name of the network interface (e.g., `eth0`, `wlan0`)
-  - Syntax
+#### **1. `ip addr add` (Manually Assign an IPv4 Address)**:
+  - **Purpose**: Assign a specific IPv4 address to a network interface manually.
+  - **Syntax**:  
+    ```bash
+    sudo ip addr add <IP_address>/<subnet_mask> dev <interface_name>
+    ```
+    - `<IP_address>`: The IPv4 address you want to assign.
+    - `<subnet_mask>`: The subnet mask in CIDR notation (e.g., `/24` for a 255.255.255.0 mask).
+    - `<interface_name>`: The name of the network interface (e.g., `eth0`, `wlan0`).
 
-```bash
-sudo ip addr add IP_address/subnet_mask dev interface_name
-```
-
-  - Example
-
-```bash
+  - **Example**:  
+    ```bash
     sudo ip addr add 192.168.1.100/24 dev eth0
-```
+    ```
+    This assigns `192.168.1.100` with a `/24` subnet mask to the `eth0` interface.
 
-  - This assigns `192.168.1.100` with a `/24` subnet mask to the `eth0` interface
-- `ip addr show` (Verify IPv4 Address Assignment)
-  - Purpose
-    - Display the current configuration of all network interfaces, including assigned IP addresses
+#### **2. `ip addr show` (Verify IPv4 Address Assignment)**:
+  - **Purpose**: Display the current configuration of all network interfaces, including assigned IP addresses.
+  - **Syntax**:  
+    ```bash
+    ip addr show
+    ```
+    - Shows all interfaces with their current IP addresses.
 
-  - Syntax
-
-```bash
-ip addr show
-```
-
-  - Shows all interfaces with their current IP addresses
-  - To check a specific interface
-
-```bash
-ip addr show dev interface_name
-```
-
-  - `interface_name`
-    - Name of the interface to check
-  - Example  
+  - **To check a specific interface**:
+    ```bash
+    ip addr show dev <interface_name>
+    ```
+    - `<interface_name>`: Name of the interface to check.
+  
+  - **Example**:  
     ```bash
     ip addr show dev eth0
     ```
-  - This shows the IP configuration for `eth0` only
+    This shows the IP configuration for `eth0` only.
 
-#### 3. `ping` (Verify Network Connectivity):
-  - Purpose: Test the reachability of a device on the network by sending ICMP Echo Requests.
-  - Syntax:  
+#### **3. `ping` (Verify Network Connectivity)**:
+  - **Purpose**: Test the reachability of a device on the network by sending **ICMP Echo Requests**.
+  - **Syntax**:  
     ```bash
-    ping destination_IP_or_hostname
+    ping <destination_IP_or_hostname>
     ```
-    - `destination_IP_or_hostname`: The IP address or domain name of the target you want to check connectivity with.
+    - `<destination_IP_or_hostname>`: The IP address or domain name of the target you want to check connectivity with.
 
-  - Example:  
+  - **Example**:  
     ```bash
     ping 192.168.1.1
     ```
     Sends echo requests to the target at `192.168.1.1`.
 
-  - Parameter: `-c n`:
-    - Purpose: Limits the number of echo requests sent.
-    - Syntax:  
+  - **Parameter: `-c n`**:
+    - **Purpose**: Limits the number of **echo requests** sent.
+    - **Syntax**:  
       ```bash
-      ping -c number destination_IP_or_hostname
+      ping -c <number> <destination_IP_or_hostname>
       ```
-      - `number`: Number of echo requests to send.
+      - `<number>`: Number of echo requests to send.
 
-    - Example:  
+    - **Example**:  
       ```bash
       ping -c 4 8.8.8.8
       ```
       Sends 4 echo requests to Google's DNS server (`8.8.8.8`), then stops.
 
-  - Stopping Ping:  
+  - **Stopping Ping**:  
     - If the `-c` parameter is not used, the `ping` command runs indefinitely. 
-    - To stop: Press Ctrl + C to terminate the command manually.
+    - **To stop**: Press **Ctrl + C** to terminate the command manually.
 
 #### Key Points to Remember:
-1. Manual IP Configuration:
+1. **Manual IP Configuration**:
    - Use `ip addr add` to assign an IP.
    - Use `ip addr show` to verify the configuration.
 
-2. DHCP Setup:
+2. **DHCP Setup**:
    - Automatically assigns IPs without manual intervention.
 
-3. Network Connectivity Check:
+3. **Network Connectivity Check**:
    - Use `ping` to test connection to another device.
-   - Control the number of ping requests with `-c`, and stop continuous ping with Ctrl + C.
+   - Control the number of ping requests with `-c`, and stop continuous ping with **Ctrl + C**.
 
 
 
